--- a/02-airbnb-layout-solution/css/styles.css
+++ b/02-airbnb-layout-solution/css/styles.css
@@ -47,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .image-mask-darken {
-  position: absolute;
+  position: relative;
 }
 
 .image-mask-darken:before {
@@ -56,7 +56,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.2);
   content: "";
 }
 
@@ -247,7 +247,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Styling horizontal rules requires you give it some height */
 hr {
-  border: 1px solid rgba(255,255,255,0.2);
+  border: 1px solid rgba(255,255,255,0.4);
   margin-bottom: 40px;
   width: 95%;
 }
